# fixed-points-backend

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 41c7562bec15_add_map_coordinates_to_fixed_point_steps.py  ca0c8ae5dbe4_initial_migration_create_all_tables.py
api/: auth.py  fixed_points.py  upload.py  valorant.py
core/: __init__.py  config.py  database.py  security.py
models/: __init__.py  auth_token.py  favorite.py  fixed_point.py  user.py
routers/: discord_auth.py  favorites.py
schemas/: auth.py  favorite.py  fixed_point.py
scripts/: check_db.py  init_db.sh
services/: auth.py  image_cache.py  valorant.py
