[project]
name = "fixed-points-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "authlib>=1.3.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.17",
    "email-validator>=2.1.0",
    "aiofiles>=23.2.1",
    "pillow>=10.2.0",
    "aiohttp>=3.11.0",
]
